# mdview-py

./: .gitignore  Makefile.am  README.md  configure.ac  mdview-py.pot  mdview.py  mdview.py.in  setup.py
arch/: PKGBUILD  mdview-py.install
data/: Makefile.am  apps.mdview-py.gschema.xml  mdview.py.desktop  mdview.py.desktop.in
po/: Makefile.am  de.po
